# zeeker-datasette

./: .env.example  .gitignore  Dockerfile  LICENSE  Readme.md  docker-compose.yml  entrypoint.sh  llms.txt  metadata.json  pyproject.toml  requirements.txt  zeeker-refresh-cron.sh
.github/workflows/: upload-base-assets.yml
plugins/: sources_page.py  status_page.py  string_manager.py  strings.yaml  template_filters.py
scripts/: __init__.py  convert_hero_image.py  download_from_s3.py  manage.py
static/css/: custom.css  zeeker-theme.css
static/js/: custom.js  zeeker-enhanced.js
templates/: _footer.html  _header.html  database.html  index.html  query.html  row.html  table.html
templates/pages/: about.html  how-to-use.html  index.html  sources.html  status.html
tests/: conftest.py  fixtures.py  test_download_from_s3.py  test_manage.py
